# leo-trident

./: .env.example  .gitignore  LICENSE  PLAN-feature-waves.md  README.md  REMEDIATION.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: test.yml
data/: leo_trident.db
deploy/: env.template  install-systemd.sh  uninstall-systemd.sh
deploy/macos/: README.md  com.leotrident.backup.plist  com.leotrident.consolidate.plist  com.leotrident.health.plist  com.leotrident.watcher.plist
deploy/systemd/: leo-trident.service
scripts/: backup.py  consolidate.py  init_db.py  onstart.sh  run_eval.py  run_health.py  run_watcher.py  smoke.py  smoke.sh
src/: api.py  config.py  cost_tracking.py  notify.py  pricing.py  quality.py  scheduler.py  schema.py
src/ingest/: asme_parser.py  embedder.py  file_watcher.py  image.py  pdf.py  stub_embedder.py
src/jobs/: __init__.py  consolidation.py
src/memory/: consolidator.py  conversation_logger.py  drift_monitor.py  (+2 more)
tests/: test_backup.py  test_config.py  test_consolidation.py  test_consolidation_job.py  test_conversation_retrieval.py  test_conversation_schema.py  test_cost_tracking.py  test_cost_tracking_integration.py  test_deploy.py  test_drift_monitor.py  test_e2e.py  test_eval_framework.py  test_eval_regression.py  test_health.py  test_ingest_multimodal.py  test_ingest_source.py  test_llm_client.py  test_metrics.py  test_metrics_helpers.py  test_notify.py  test_quality.py  test_relevance_judge.py  test_reply_aware.py  test_scheduler.py  test_service_api.py  test_smoke.py  test_typed_refs.py
(+140 files in other folders)
